--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 clap = "3.0.0"
-dot-writer = "0.1.2"
+env_logger = "0.9.0"
+log = "0.4.14"
 serde = { version = "1.0.132", features = ["derive"] }
 serde_derive = "1.0.132"
 serde_json = "1.0.73"
