--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,3 @@
-[package]
-name = "graphwalker"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-clap = "3.0.0"
-env_logger = "0.9.0"
-log = "0.4.14"
-serde = { version = "1.0.132", features = ["derive"] }
-serde_derive = "1.0.132"
-serde_json = "1.0.73"
+members = ["crates/*"]
