--- a/crates/graph/Cargo.toml
+++ b/crates/graph/Cargo.toml
@@ -7,3 +7,9 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0.147", features = ["derive"] }
 serde_derive = "1.0.147"
+serde_with = "2.3.1"
+
+[dev_dependencies]
+serde_json = "1.0.87"
+serde_with = "2.3.1"
+pretty_assertions = "1.3.0"
