--- a/crates/io/Cargo.toml
+++ b/crates/io/Cargo.toml
@@ -9,3 +9,6 @@ graph = { path = "../graph" }
 log = "0.4.17"
 serde = { version = "1.0.147", features = ["derive"] }
 serde_json = "1.0.87"
+
+[dev_dependencies]
+pretty_assertions = "1.3.0"
