--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -10,6 +10,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_derive = "1.0.188"
 log = "0.4.20"
 rand = "0.8.5"
+rand_chacha = "0.3.1"
 
 [dev-dependencies]
 io = { path = "../io" }
