--- a/crates/rest/Cargo.toml
+++ b/crates/rest/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 machine = { path = "../machine" }
 serde = { version = "1.0", features = ["derive"] }
+serde_derive = "1.0.188"
 serde_json = "1.0.107"
 warp = "0.3.6"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
