--- a/crates/rest/Cargo.toml
+++ b/crates/rest/Cargo.toml
@@ -11,3 +11,8 @@ serde_derive = "1.0.188"
 serde_json = "1.0.107"
 warp = "0.3.6"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+
+
+[dev-dependencies]
+io = { path = "../io" }
+assert_json = "0.1.0"
