--- a/crates/io/Cargo.toml
+++ b/crates/io/Cargo.toml
@@ -9,6 +9,8 @@ graph = { path = "../graph" }
 log = "0.4.20"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
+nom = "7.1.3"
+parse-hyperlinks = "0.26.1"
 
 [dev_dependencies]
 pretty_assertions = "1.4.0"
