--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -9,9 +9,10 @@ graph = { path = "../graph" }
 serde = { version = "1.0.188", features = ["derive"] }
 serde_derive = "1.0.188"
 log = "0.4.20"
-rand = "0.8.5"
-rand_chacha = "0.3.1"
+fastrand = "2.0.1"
+serde_json = "1.0.107"
 
 [dev-dependencies]
 io = { path = "../io" }
 pretty_assertions = "1.4.0"
+assert-json-diff = "2.0.2"
