--- a/crates/rest/Cargo.toml
+++ b/crates/rest/Cargo.toml
@@ -11,8 +11,10 @@ serde_derive = "1.0.188"
 serde_json = "1.0.107"
 warp = "0.3.6"
 tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
+log = "0.4.20"
 
 
 [dev-dependencies]
 io = { path = "../io" }
-assert_json = "0.1.0"
+assert-json-diff = "2.0.2"
+snailquote = "0.3.1"
