--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -11,6 +11,7 @@ serde_derive = "1.0.188"
 log = "0.4.20"
 fastrand = "2.0.1"
 serde_json = "1.0.107"
+evalexpr = "11.1.0"
 
 [dev-dependencies]
 io = { path = "../io" }
