--- a/crates/graph/Cargo.toml
+++ b/crates/graph/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 
 [dependencies]
-serde = { version = "1.0.188", features = ["derive"] }
+serde = { version = "1.0.188", features = ["derive", "rc"] }
 serde_derive = "1.0.188"
 serde_with = "3.3.0"
 
