--- a/crates/machine/Cargo.toml
+++ b/crates/machine/Cargo.toml
@@ -10,7 +10,7 @@ serde = { version = "1.0.188", features = ["derive"] }
 serde_derive = "1.0.188"
 log = "0.4.20"
 fastrand = "2.0.1"
-serde_json = "1.0.107"
+serde_json = { version = "1.0.108", features = ["preserve_order"] }
 evalexpr = "11.1.0"
 
 [dev-dependencies]
