--- a/crates/graph/Cargo.toml
+++ b/crates/graph/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 serde = { version = "1.0.188", features = ["derive", "rc"] }
 serde_derive = "1.0.188"
 serde_with = "3.3.0"
+log = "0.4.20"
 
 [dev_dependencies]
 serde_json = "1.0.107"
